# capstone-snapncook

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements  requirements.txt  test.db
.github/workflows/: backend.yml
ai-model/: result.py
alembic/: env.py
alembic/versions/: 14ce55ef6e36_add_socialaccount_table.py  3c2306c55306_add_refresh_token.py  3fbf33899cda_create_initial_tables.py  6105f2623068_add_search_log_and_ranking_tables.py  6f67aa1a452f_add_is_admin_to_users.py  bf1cf7280a9f_create_bookmarks_table.py  cd0c04fa3978_create_initial_tables.py  d5572b973dc7_initial_tables.py  dbdfe10273c8_rename_date_to_base_date_in_search_.py
app/: main.py
backend/: create_tables.py  crud.py  db.py  init_db.py  main.py  models.py  sample_data.py  schemas.py  test.http
backend/app/: main.py
backend/crud/: __init__.py  food.py  recipe.py  user.py
backend/db/: session.py
backend/models/: __init__.py  food.py  recipe.py  review.py  user.py
backend/routers/: admin.py  auth_routes.py  bookmark.py  detectionresult.py  food.py  home.py  mypage.py  oauth_routes.py  recipe.py  recipestep.py  recommend.py  review.py  user.py  useringredientinput.py  useringredientinputrecipe.py  userlog.py
backend/schemas/: __init__.py  food.py  recipe.py  user.py
backend/tests/: conftest.py  test_admin_food.py  test_food.py  (+18 more)
crud/: review.py
db/: init_db.py
docs/: api-docs.md  branch-strategy.md  user-test-cases.md  user-test-report.md
frontend-web/: index.html  package-lock.json  package.json
routers/: food.py
schemas/: food.py  review.py
(+72 files in other folders)
