[tool.poetry]
name = "capstone-snapncook"
version = "0.1.0"
description = ""
authors = ["MINJiwonJiwon <106476021+MINJiwonJiwon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
faker = "^37.1.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
authlib = "^1.5.2"
httpx = "^0.28.1"
itsdangerous = "^2.2.0"
apscheduler = "^3.11.0"
pytz = "^2025.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
